# jobs

./: .gitignore  DISCOVERY_QUICK_START.md  IMPROVEMENTS.md  LICENSE  README.md  SEARXNG_SETUP.md  SERP_ALTERNATIVES.md  alternative_discovery.py  discovery.py  enhanced_discovery.py  export_utils.py  fetch_job.py  full_pipeline.sh  gather_jobs.py  google_custom_search.py  optimized_serp_discovery.py  pyproject.toml  rm_companies_dup.py  searxng_discovery.py  serpapi_discovery.py  sitemap_discovery.py  upload_to_cloudflare.py
amazon/: main.py
api/: .env.example  README.md  __init__.py  config.py  main.py  models.py
api/providers/: __init__.py  base.py  jsearch.py  serpapi.py
ashby/: companies.csv  export_to_csv.py  extract_companies_ashby.py  main.py
classifier/: eu.csv  main.py
cursor/: main.py
gem/: gem_companies.csv
google/: .gitignore  main.py
greenhouse/: export_to_csv.py  greenhouse_companies.csv  main.py
job-map/: .gitignore  README.md  SETUP.md  index.html  minimal_map.py  package-lock.json  package.json  server.js  vercel.json
job-map/api/: chat.ts
job-map/public/: jobs_minimal.csv  robots.txt  sitemap.xml
job-map/scripts/: minimal_map.py
lever/: export_to_csv.py  extract_companies_lever.py  lever_companies.csv  main.py
models/: rippling.py
orchestrator/: README.md  __init__.py  config.py  consolidate_jobs.py  pipeline.py
rippling/: export_to_csv.py  main.py  rippling_companies.csv
smartrecruiters/: companies.csv
workable/: export_to_csv.py  main.py  serp.py  workable_companies.csv
workday/: workday_companies.csv
(+18 files in other folders)
